coreção de erros

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 600px)">
+    <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 700px)">
     
     <title>Taverna Geek</title>
 </head>
 <body>
     <header>
         <img id="logo" src="imagens/logo2.png" alt="Logo da empresa">
+        <img id="compra" src="imagens/carrinho1.png" alt="Carrinho">
+        <img id="menu" src="imagens/menu2.png" alt="mais opções">
+        <img id="menu_desktop" src="imagens/menu_desktop.png" alt="Mais opções">
         <form action="pesquisa.php" method="get">
             <div>
                 <input type="search" name="pesquisa" id="ipesquisa" placeholder="&#x1F50D; Buscar Produtos...">
             </div>
         </form>
-        <img id="compra"  src="imagens/carrinho1.png" alt="Carrinho">
     </header>
     <body>
-        <div>
-            
+        <div> 
         </div>
     </body>
-
 </body>
 </html>
