--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
         <img id="logo" src="imagens/logo2.png" alt="Logo da empresa">
         <img id="compra" src="imagens/carrinho1.png" alt="Carrinho">
         <nav>
-            <!--<img id="menu" src="imagens/menu2.png" alt="mais opções">-->
-            <a class="menu_lateral" href="/"></a>
+            <a class="menu_lateral" href="/" id="inutil"></a>
                 <div class="menu">
                     <div class="line1"></div>
                     <div class="line1"></div>
                     <div class="line1"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#">Perfil</a></li>
+                    <li><a href="#">Meu Perfil</a></li>
                     <li><a href="#">Bonecos</a></li>
                     <li><a href="#">RPGs</a></li>
                     <li><a href="#">Mangas</a></li>
                     <li><a href="#">Acessorios</a></li>
                 </ul>
         </nav>
-        <!-- <img id="menu_desktop" src="imagens/menu_desktop.png" alt="Mais opções">* -->
         <form action="pesquisa.php" method="get">
             <div>
                 <input type="search" name="pesquisa" id="ipesquisa" placeholder="&#x1F50D; Buscar Produtos...">
