--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 700px)">
-    <link rel="stylesheet" href="estilos/nav-bar.css">
+    <link rel="stylesheet" href="estilos/menu_desktop.css" media="screen and (min-width: 700px)">
     <title>Taverna Geek</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
                 <input type="search" name="pesquisa" id="ipesquisa" placeholder="&#x1F50D; Buscar Produtos...">
             </div>
         </form>
-        <script src="javascript/script.js"></script>
+        <script src="javascript/menu_desktop.js"></script>
     </header>
     <body>
         <div> 
