--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    
     <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 700px)">
+
     <link rel="stylesheet" href="estilos/menu_desktop.css" media="screen and (min-width: 700px)">
+
+    <link rel="stylesheet" href="estilos/menu_mobile.css" media="screen and (max-width: 700px)">
+
     <title>Taverna Geek</title>
 </head>
 <body>
@@ -23,8 +28,8 @@
                     <li><a href="#">Meu Perfil</a></li>
                     <li><a href="#">Bonecos</a></li>
                     <li><a href="#">RPGs</a></li>
-                    <li><a href="#">Mangas</a></li>
-                    <li><a href="#">Acessorios</a></li>
+                    <li><a href="#">Mangás/HQs</a></li>
+                    <li><a href="#">Acessórios</a></li>
                 </ul>
         </nav>
         <form action="pesquisa.php" method="get">
