--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <input type="search" name="pesquisa" id="ipesquisa" placeholder="&#x1F50D; Buscar Produtos...">
             </div>
         </form>
-        <script src="javascript/menu_desktop.js" media="screen and (min-width:700px)"></script>
+        <script src="javascript/menu_desktop.js"></script>
     </header>
     <body>
         <ul class="nav-list2">
