criei o básico das outras paginas

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/style.css">
-    
-    <link rel="stylesheet" href="estilos/mobile.css" media="screen and (max-width: 700px)">
-
+    <link rel="stylesheet" href="estilos/header_mobile.css" media="screen and (max-width: 700px)">
+    <link rel="stylesheet" href="estilos/header_desktop.css" media="screen and (min-width: 700px)">
     <link rel="stylesheet" href="estilos/menu_desktop.css" media="screen and (min-width: 700px)">
-
     <link rel="stylesheet" href="estilos/menu_mobile.css" media="screen and (max-width: 700px)">
+    <link rel="stylesheet" href="estilos/home_desktop.css">
 
     <title>Taverna Geek</title>
 </head>
@@ -26,10 +24,10 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">Meu Perfil</a></li>
-                    <li><a href="#">Bonecos</a></li>
-                    <li><a href="#">RPGs</a></li>
-                    <li><a href="#">Mangás/HQs</a></li>
-                    <li><a href="#">Acessórios</a></li>
+                    <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
+                    <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+                    <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
+                    <li><a href="Paginas/Acessorios.html">Acessórios</a></li>
                 </ul>
         </nav>
         <form action="pesquisa.php" method="get">
@@ -39,16 +37,16 @@
         </form>
         <script src="javascript/menu_desktop.js"></script>
     </header>
-    <body>
+    <main>
         <ul class="nav-list2">
             <li><a href="#">Meu Perfil</a></li>
-            <li><a href="#">Bonecos</a></li>
-            <li><a href="#">RPGs</a></li>
-            <li><a href="#">Mangás/HQs</a></li>
-            <li><a href="#">Acessórios</a></li>
+            <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
+            <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+            <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
+            <li><a href="Paginas/Acessorios.html">Acessórios</a></li>
         </ul>
         <div> 
         </div>
-    </body>
+    </main>
 </body>
 </html>
