--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
         </ul>
         <div> 
         </div>
+        <section>
+            <ul>
+                <li><div><a href=""><img src="" alt=""></a></div></li>
+                <li><div><a href=""><img src="" alt=""></a></div></li>
+                <li><div><a href=""><img src="" alt=""></a></div></li>
+                <li><div><a href=""><img src="" alt=""></a></div></li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
