--- a/Paginas/Acessorios.html
+++ b/Paginas/Acessorios.html
@@ -22,10 +22,11 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">Meu Perfil</a></li>
-                    <li><a href="Bonecos.html">Bonecos</a></li>
-                    <li><a href="Rpgs.html">RPGs</a></li>
-                    <li><a href="Mangas.html">Mangás/HQs</a></li>
-                    <li><a href="Acessorios.html">Acessórios</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
+                    <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+                    <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
+                    <li><a href="Paginas/Acessorios.html" class="selecionado">Acessórios</a></li>
                 </ul>
         </nav>
         <form action="pesquisa.php" method="get">
@@ -38,10 +39,11 @@
     <main>
         <ul class="nav-list2">
             <li><a href="#">Meu Perfil</a></li>
-            <li><a href="Bonecos.html">Bonecos</a></li>
-            <li><a href="Rpgs.html">RPGs</a></li>
-            <li><a href="Mangas.html">Mangás/HQs</a></li>
-            <li><a href="Acessorios.html">Acessórios</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
+            <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+            <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
+            <li><a href="Paginas/Acessorios.html" class="selecionado">Acessórios</a></li>
         </ul>
         <div> 
         </div>
