--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">Meu Perfil</a></li>
+                    <li><a href="/" class="selecionado">Home</a></li>
                     <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
                     <li><a href="Paginas/Rpgs.html">RPGs</a></li>
                     <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
@@ -40,6 +41,7 @@
     <main>
         <ul class="nav-list2">
             <li><a href="#">Meu Perfil</a></li>
+            <li><a href="/" class="selecionado">Home</a></li>
             <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
             <li><a href="Paginas/Rpgs.html">RPGs</a></li>
             <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
