resolvi algumas coisas

--- a/Paginas/Mangas.html
+++ b/Paginas/Mangas.html
@@ -21,7 +21,7 @@
                     <div class="line1"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#">Meu Perfil</a></li>
+                    <li><a href="../form/cadastro.html">Meu Perfil</a></li>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
                     <li><a href="Paginas/Rpgs.html">RPGs</a></li>
@@ -38,7 +38,7 @@
     </header>
     <main>
         <ul class="nav-list2">
-            <li><a href="#">Meu Perfil</a></li>
+            <li><a href="../form/cadastro.html">Meu Perfil</a></li>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
             <li><a href="Paginas/Rpgs.html">RPGs</a></li>
