--- a/form/cadastro.html
+++ b/form/cadastro.html
@@ -4,47 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
-    <link rel="stylesheet" href="teste.css">
+    <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
-    <header>
-        <img id="logo" src="../imagens/logo2.png" alt="Logo da empresa">
-        <img id="compra" src="../imagens/carrinho1.png" alt="Carrinho">
-        <nav>
-            <a class="menu_lateral" href="/" id="inutil"></a>
-                <div class="menu" onclick="menuClicado()">
-                    <div class="line1"></div>
-                    <div class="line1"></div>
-                    <div class="line1"></div>
-                </div>
-                <ul class="nav-list">
-                    <li><a href="#">Meu Perfil</a></li>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
-                    <li><a href="Paginas/Rpgs.html">RPGs</a></li>
-                    <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
-                    <li><a href="Paginas/Acessorios.html" class="selecionado">Acessórios</a></li>
-                </ul>
-        </nav>
-        <form action="pesquisa.php" method="get">
-            <div>
-                <input type="search" name="pesquisa" id="ipesquisa" placeholder="&#x1F50D; Buscar Produtos...">
-            </div>
-        </form>
-        <script src="../javascript/menu_desktop.js"></script>
-    </header>
-    <main>
-        <ul class="nav-list2">
-            <li><a href="#">Meu Perfil</a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
-            <li><a href="Paginas/Rpgs.html">RPGs</a></li>
-            <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
-            <li><a href="Paginas/Acessorios.html" class="selecionado">Acessórios</a></li>
-        </ul>
-        <div> 
-        </div>
-    </main>
+    <img src="../imagens/logo.png" alt="">
     <section>
         <form action="post">
             <legend>Cadastro</legend>
@@ -84,7 +47,9 @@
                 <label for="isenha">Senha</label >
                 <input type="password" name="senha" id="isenha" requerid>
             </div>
-            <div><input type="submit"  value="Cadastrar" id="cadastrar" class="cadastrar"></div>
+            <div id="botao">
+                <input type="submit"  value="Cadastrar" id="cadastrar" class="cadastrar">
+            </div>
         </form>
     </section>
 </body>
