mudança no cadastro

--- a/form/cadastro.html
+++ b/form/cadastro.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="cadastro.css">
 </head>
 <body>
-    <img src="../imagens/logo.png" alt="">
-    <section>
+    <section id="descricao">\
+        <img src="../imagens/logoG.png" alt="">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi porro facilis debitis rerum doloribus earum, enim, a ratione impedit ullam culpa quo hic deserunt eum architecto iure laboriosam est inventore!</p>
+    </section>
+    <section id="form">
         <form action="post">
             <legend>Cadastro</legend>
             <div class="inputBox">
