Responsividade do cadastro

--- a/form/cadastro.html
+++ b/form/cadastro.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" href="cadastro.css" media="screen and (min-width:700px)">
+    <link rel="stylesheet" href="casdastro_mobile.css" media="screen and (max-width:700px)">
 </head>
 <body>
-    <section id="descricao">\
-        <img src="../imagens/logoG.png" alt="">
+    <header>
+        <img src="../imagens/logo2.png" alt="logo">
+        <h1>Taverna Geek</h1>
+    </header>
+    <section id="descricao">
+        <img src="../imagens/logoG.png" alt=""><h1>Taverna Geek</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi porro facilis debitis rerum doloribus earum, enim, a ratione impedit ullam culpa quo hic deserunt eum architecto iure laboriosam est inventore!</p>
     </section>
     <section id="form">
