estilos pronto, menu posição ajustada celular

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="line1"></div>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="form/cadastro.html">Meu Perfil</a></li>
+                    <li><a href="form/cadastro/cadastro.html">Meu Perfil</a></li>
                     <li><a href="/" class="selecionado">Home</a></li>
                     <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
                     <li><a href="Paginas/Rpgs.html">RPGs</a></li>
