--- a/Paginas/Bonecos.html
+++ b/Paginas/Bonecos.html
@@ -24,7 +24,7 @@
                     <li><a href="../form/cadastro/cadastro.html">Meu Perfil</a></li>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="Bonecos.html" class="selecionado">Bonecos</a></li>
-                    <li><a href="Rpgs.html">RPGs</a></li>
+                    <li><a href="Rpgs.html">Jogos</a></li>
                     <li><a href="Mangas.html">Mangás/HQs</a></li>
                     <li><a href="Acessorios.html">Acessórios</a></li>
                 </ul>
@@ -41,7 +41,7 @@
             <li><a href="../form/cadastro/cadastro.html">Meu Perfil</a></li>
             <li><a href="../index.html">Home</a></li>
             <li><a href="Bonecos.html" class="selecionado">Bonecos</a></li>
-            <li><a href="Rpgs.html">RPGs</a></li>
+            <li><a href="Rpgs.html">Jogos</a></li>
             <li><a href="Mangas.html">Mangás/HQs</a></li>
             <li><a href="Acessorios.html">Acessórios</a></li>
         </ul>
