--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="estilos/menu_desktop.css" media="screen and (min-width: 700px)">
     <link rel="stylesheet" href="estilos/menu_mobile.css" media="screen and (max-width: 700px)">
     <link rel="stylesheet" href="estilos/home_desktop.css">
-
     <title>Taverna Geek</title>
 </head>
 <body>
@@ -26,7 +25,7 @@
                     <li><a href="form/cadastro/cadastro.html">Meu Perfil</a></li>
                     <li><a href="/" class="selecionado">Home</a></li>
                     <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
-                    <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+                    <li><a href="Paginas/Rpgs.html">Jogos</a></li>
                     <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
                     <li><a href="Paginas/Acessorios.html">Acessórios</a></li>
                 </ul>
@@ -43,18 +42,22 @@
             <li><a href="form/cadastro/cadastro.html">Meu Perfil</a></li>
             <li><a href="/" class="selecionado">Home</a></li>
             <li><a href="Paginas/Bonecos.html">Bonecos</a></li>
-            <li><a href="Paginas/Rpgs.html">RPGs</a></li>
+            <li><a href="Paginas/Rpgs.html">Jogos</a></li>
             <li><a href="Paginas/Mangas.html">Mangás/HQs</a></li>
             <li><a href="Paginas/Acessorios.html">Acessórios</a></li>
         </ul>
         <div> 
         </div>
+        <br>
         <section>
-            <ul>
-                <li><div><a href=""><img src="" alt=""></a></div></li>
-                <li><div><a href=""><img src="" alt=""></a></div></li>
-                <li><div><a href=""><img src="" alt=""></a></div></li>
-                <li><div><a href=""><img src="" alt=""></a></div></li>
+            <div id="titulo">    
+                <p>Nossos Produtos --></p>    
+            </div>
+            <ul class="lista_produtos">
+                <li><img src="imagens/mangas.png" alt="" height="200px" width="170px"><p class="produto">História em quadrinhos Super Herois</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
+                <li><img src="imagens/bonecos.png" alt="" height="200px" width="170px"><p class="produto">Funkos Pop Noiva Cadaver</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
+                <li><img src="imagens/acessorios.png" alt="" height="200px" width="170px"><p class="produto">Colar do Personagem Crood</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
+                <li><img src="imagens/jogos.png" alt="" height="200px" width="170px"><p class="produto">Jogo de tabulerio e estrategia War</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
             </ul>
         </section>
     </main>
