--- a/Paginas/Rpgs.html
+++ b/Paginas/Rpgs.html
@@ -24,7 +24,7 @@
                     <li><a href="../form/cadastro/cadastro.html">Meu Perfil</a></li>
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="/Bonecos.html">Bonecos</a></li>
-                    <li><a href="/Rpgs.html" class="selecionado">RPGs</a></li>
+                    <li><a href="/Rpgs.html" class="selecionado">Jogos</a></li>
                     <li><a href="/Mangas.html">Mangás/HQs</a></li>
                     <li><a href="/Acessorios.html">Acessórios</a></li>
                 </ul>
