--- a/form/cadastroProduto/cadastroProduto.html
+++ b/form/cadastroProduto/cadastroProduto.html
@@ -10,9 +10,8 @@
     <main>
         <form action="" method="post">
             <legend>Cadastro de Produtos</legend>
-            <br>
-            <div>
-                <label for="iimage"></label>
+            <div id="imagem">
+                <label for="iimage">Anexar Imagem</label>
                 <input type="file" name="image" id="iimage">
             </div>
             <div class="campos">
@@ -20,12 +19,12 @@
                 <input type="text" name="Nome" id="inome">
             </div>
             <div class="campos">
-                <label for="idescricao">Descrição</label>
-                <textarea name="descricao" id="idescricao" cols="40" rows="3"></textarea>
-            </div>
-            <div class="campos">
                 <label for="imarca">Marca</label>
                 <input type="text" name="marca" id="imarca">
+            </div>
+            <div class="campos">
+                <label for="idescricao">Descrição</label>
+                <textarea name="descricao" id="idescricao" cols="40" rows="3"></textarea>
             </div>
             <div class="campos">
                 <label for="iprecoCusto">Preço de Custo</label>
@@ -34,6 +33,9 @@
             <div class="campos">
                 <label for="iprecoVenda">Preço de Venda</label>
                 <input type="number" name="precoVenda" id="iprecoVenda">
+            </div>
+            <div id="botao">
+                <input type="submit" value="Cadastrar">
             </div>
         </form>
     </main>
