--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="estilos/menu_desktop.css" media="screen and (min-width: 700px)">
     <link rel="stylesheet" href="estilos/menu_mobile.css" media="screen and (max-width: 700px)">
     <link rel="stylesheet" href="estilos/home_desktop.css">
+    <link rel="stylesheet" href="estilos/home_mobile.css" media="screen and (max-width: 700px)">
     <title>Taverna Geek</title>
 </head>
 <body>
     <header>
-        <img id="logo" src="imagens/logo2.png" alt="Logo da empresa">
+        <img id="logo" src="imagens/logo_new.png" alt="Logo da empresa" width="160px">
         <img id="compra" src="imagens/carrinho1.png" alt="Carrinho">
         <nav>
             <a class="menu_lateral" href="/" id="inutil"></a>
