--- a/Paginas/Acessorios.html
+++ b/Paginas/Acessorios.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="../estilos/menu_desktop.css" media="screen and (min-width: 700px)">
     <link rel="stylesheet" href="../estilos/header_mobile.css" media="screen and (max-width: 700px)">
     <link rel="stylesheet" href="../estilos/menu_mobile.css" media="screen and (max-width: 700px)">
+    <link rel="stylesheet" href="../estilos/paginas.css">
 </head>
 <body>
     <header>
-        <img id="logo" src="../imagens/logo2.png" alt="Logo da empresa">
+        <img id="logo" src="../imagens/logo_new.png" alt="Logo da empresa" width="160px">
         <img id="compra" src="../imagens/carrinho1.png" alt="Carrinho">
         <nav>
             <a class="menu_lateral" href="/" id="inutil"></a>
@@ -48,6 +49,13 @@
         <div> 
         </div>
     </main>
-    <h1>Testando</h1>
+    <section class="produtos">
+        <ul class="lista_produtos">
+            <div id="titulo">
+                <p>Acessórios --></p>
+            </div>
+            <li><img src="../imagens/acessorios.png" alt="" height="200px" width="170px"><p class="produto">Colar do Personagem Crood</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
+        </ul>
+    </section>
 </body>
 </html>
