--- a/form/cadastro/cadastro.html
+++ b/form/cadastro/cadastro.html
@@ -15,7 +15,7 @@
     <main>
         <section id="descricao">
             <img src="../../imagens/logoG.png" alt=""><h1>Taverna Geek</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi porro facilis debitis rerum doloribus earum, enim, a ratione impedit ullam culpa quo hic deserunt eum architecto iure laboriosam est inventore!</p>
+            <p>Nossa empresa consiste em uma loja cujo a qual atua no ramo Geek, tendo como objetivo conquistar um público cada vez maior, sem limitações de faixa etária. Focamos na venda de jogos de tabuleiro, acessórios, decorações, mangás e livros.</p>
         </section>
         <section id="form">
             <form action="post">
