--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div> 
         </div>
         <br>
-        <section>
+        <section class="produtos">
             <div id="titulo">    
-                <p>Nossos Produtos --></p>    
+                <p>Nossos Produtos</p>    
             </div>
             <ul class="lista_produtos">
                 <li><img src="imagens/mangas.png" alt="" height="200px" width="170px"><p class="produto">História em quadrinhos Super Herois</p><p class="valor">R$30,00</p><a class="comprar" href="#">Comprar</a></li>
